# radio

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.old  Makefile  README.md  config.toml  env  install.sh  radio.service  update_version.py
radio-web/: package-lock.json  package.json  vite.config.ts
radio-web/html/: dash.html  login.html  settings.html
radio-web/public/assets/: manifest.webmanifest  theme.css
radio-web/src/: Page.svelte  global.scss  global.ts
radio-web/src/components/: Progress.svelte
radio-web/src/pages/: App.svelte.old
radio-web/src/pages/dash/: App.svelte
radio-web/src/pages/login/: App.svelte
radio-web/src/pages/settings/: App.svelte
radio-web/src/theme/: _smui-theme.scss
src/: audio.rs  cli.rs  config.rs  decoder.rs  default_config.toml  main.rs  routes.rs  settings.rs
src/audio/: mod.rs  mpv.rs  rodio.rs
