[package]
name = "radio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
env_logger = "0.10"
log = "0.4.17"
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.23.0", default-features = false, features = ["macros", "rt-multi-thread", "io-std"] }

# rodio backend
bytes = { version = "1.3.0" }
futures-util = { version = "0.3.25" }
minimp3 = "0.5.1"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "stream", "blocking"] }
rodio = { version = "0.16.0" }
rustls = { version = "0.20.7" }
anyhow = "1.0.68"
thiserror = "1.0.38"


