[package]
name = "radio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.2.1"
anyhow = "1.0.68"
bytes = { version = "1.3.0" }
env_logger = "0.10"
futures-util = { version = "0.3.25" }
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", default-features = false, features = ["macros", "rt-multi-thread", "io-std"] }
toml = "0.5.10"

# rodio backend
actix-files = "0.6.2"
actix-identity = "0.5.2"
minimp3 = "0.5.1"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "stream", "blocking"] }
rodio = { version = "0.16.0" }
rustls = { version = "0.20.7" }
serde_json = "1.0.91"
