[package]
name = "radio"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.1"
anyhow = "1.0.70"
bytes = { version = "1.4.0" }
env_logger = "0.10"
futures-util = { version = "0.3.27" }
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt-multi-thread", "io-std"] }
toml = "0.7.3"

# rodio backend
actix-files = "0.6.2"
actix-identity = "0.5.2"
minimp3 = "0.5.1"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls", "stream", "blocking"] }
rodio = { version = "0.17.1" }
rustls = { version = "0.21.0" }
serde_json = "1.0.95"
clap = { version = "4.2.1", features = ["derive"] }
